--- a/Role Based Authentication/Role-Based-Authentication/src/main/resources/application.properties
+++ b/Role Based Authentication/Role-Based-Authentication/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Role-Based-Authentication
+
+spring.datasource.url=jdbc:mysql://localhost:3306/restApiSec
+spring.datasource.username=root
+spring.datasource.password=Example@2023
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
